new role updated

--- a/index.html
+++ b/index.html
@@ -111,6 +111,18 @@
                 <p><strong>Description:</strong> Worked on large-scale backend systems, optimizing services for high-performance and scalability.</p>
             </div>
 
+            <div class="experience-card" onclick="openExperience('invisible-technologies')">
+                <h2>Invisible Technologies</h2>
+                <p>Master AI Trainer<br>[Sep 2025 - Present]</p>
+            </div>
+            <div id="invisible-technologies" class="experience-popup">
+                <span class="close-btn" onclick="closeExperience('invisible-technologies')">&times;</span>
+                <h2>Invisible Technologies</h2>
+                <p><strong>Duration:</strong> Sep 2025 - Present</p>
+                <p><strong>Role:</strong> Master AI Trainer</p>
+                <p><strong>Description:</strong> I improve the quality of GenAI responses by making them more personal, relevant, and useful to users. My responsibilities include evaluating and comparing personalization features across different AI models, reviewing summaries of user details learned by the model from past conversations, and analyzing how data is applied in user-facing responses. This work involves directly interacting with models to analyze their outputs and requires strict adherence to specific project guidelines to ensure consistency and accuracy.</p>
+            </div>
+
             <!-- Adams State University - Desktop Technician -->
             <div class="experience-card" onclick="openExperience('computing-services')">
                 <h2>Adams State University</h2>
