added new project

--- a/index.html
+++ b/index.html
@@ -444,32 +444,20 @@
             </div>
         </div>
 
-        <div class="academic-card project-card" data-tags="python ai">
-            <h3>Secure Data Transmission</h3>
-            <div class="academic-meta">
-                <span class="meta-tag tech-tag">Python</span>
-                <span class="meta-tag tech-tag">ML</span>
-            </div>
-            <p>Securing data transmission between a client and server during remote model training.</p>
-            <div class="academic-links">
-                <a href="https://github.com/calvin1011/SECURE-DATA-TRANSMISSION" target="_blank" class="academic-link">
-                    View Project
-                </a>
-            </div>
-        </div>
-
         <div class="academic-card project-card" data-tags="python react html">
-            <h3>AQI Notifier (Air Quality Alert App)</h3>
+            <h3>Lumina AI-powered Journaling Companion</h3>
             <div class="academic-meta">
-                <span class="meta-tag tech-tag">Python</span>
-                <span class="meta-tag tech-tag">Flask</span>
-                <span class="meta-tag tech-tag">Twilio</span>
+                <span class="meta-tag tech-tag">Next.js</span>
+                <span class="meta-tag tech-tag">Vercel</span>
+                <span class="meta-tag tech-tag">Recharts</span>
                 <span class="meta-tag tech-tag">React</span>
+                <span class="meta-tag tech-tag">Node.js</span>
+                <span class="meta-tag tech-tag">OpenAI</span>
             </div>
             <p>A real-time air quality monitoring app that sends users alerts when air pollution levels exceed safe limits.</p>
             <div class="academic-links">
-                <a href="https://devpost.com/software/aqi-notifier" target="_blank" class="academic-link">
-                    View Project
+                <a href="lumina-journal-923k.vercel.app/" target="_blank" class="academic-link">
+                    Try Out Lumina
                 </a>
             </div>
         </div>
@@ -488,16 +476,15 @@
             </div>
         </div>
 
-        <div class="academic-card project-card" data-tags="azure ai javascript copilot">
-            <h3>AI Career Coach</h3>
+        <div class="academic-card project-card" data-tags="python ai">
+            <h3>Secure Data Transmission</h3>
             <div class="academic-meta">
-                <span class="meta-tag tech-tag">Azure</span>
-                <span class="meta-tag tech-tag">OpenAI</span>
-                <span class="meta-tag tech-tag">Node.js</span>
+                <span class="meta-tag tech-tag">Python</span>
+                <span class="meta-tag tech-tag">ML</span>
             </div>
-            <p>Mock interview tool using OpenAI + Azure to generate questions and evaluate your answers with real-time feedback.</p>
+            <p>Securing data transmission between a client and server during remote model training.</p>
             <div class="academic-links">
-                <a href="https://github.com/calvin1011/ai-career-coach" target="_blank" class="academic-link">
+                <a href="https://github.com/calvin1011/SECURE-DATA-TRANSMISSION" target="_blank" class="academic-link">
                     View Project
                 </a>
             </div>
