added new project

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
         </div>
 
         <div class="academic-card project-card" data-tags="python react html">
-            <h3>Lumina AI-powered Journaling Companion</h3>
+            <h3>Lumina</h3>
             <div class="academic-meta">
                 <span class="meta-tag tech-tag">Next.js</span>
                 <span class="meta-tag tech-tag">Vercel</span>
@@ -454,7 +454,7 @@
                 <span class="meta-tag tech-tag">Node.js</span>
                 <span class="meta-tag tech-tag">OpenAI</span>
             </div>
-            <p>A real-time air quality monitoring app that sends users alerts when air pollution levels exceed safe limits.</p>
+            <p>An AI-powered journaling companion that helps users overcome blank page anxiety and discover patterns in their emotional journey.</p>
             <div class="academic-links">
                 <a href="lumina-journal-923k.vercel.app/" target="_blank" class="academic-link">
                     Try Out Lumina
@@ -473,6 +473,25 @@
             <div class="academic-links">
                 <a href="https://devpost.com/software/kobby" class="academic-link" target="_blank">View Project</a>
                 <a href="https://apps.apple.com/us/app/kobby-ai/id6670794222" class="academic-link secondary" target="_blank">On App Store</a>
+            </div>
+        </div>
+
+        <div class="academic-card project-card" data-tags="python ai">
+            <h3>LandIt</h3>
+            <div class="academic-meta">
+                <span class="meta-tag tech-tag">Python</span>
+                <span class="meta-tag tech-tag">React</span>
+                <span class="meta-tag tech-tag">Python</span>
+                <span class="meta-tag tech-tag">FastAPI</span>
+                <span class="meta-tag tech-tag">Firebase</span>
+                <span class="meta-tag tech-tag">PostgreSQL</span>
+                <span class="meta-tag tech-tag">Machine Learning (NLP)</span>
+            </div>
+            <p>Resume builder (focus on skill gap analysis) and Career Development Platform</p>
+            <div class="academic-links">
+                <a href="https://github.com/calvin1011/LandIt.git" target="_blank" class="academic-link">
+                    View Project
+                </a>
             </div>
         </div>
 
