updated website link

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
             </div>
             <p>An AI-powered journaling companion that helps users overcome blank page anxiety and discover patterns in their emotional journey.</p>
             <div class="academic-links">
-                <a href="lumina-journal-923k.vercel.app/" target="_blank" class="academic-link">
+                <a href="https://lumina-journal-923k.vercel.app/" target="_blank" class="academic-link">
                     Try Out Lumina
                 </a>
             </div>
