updated project time format

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </p>
 
                 <p class="recent-project">
-                    My most recent project, completed on:
+                    My most recent worked on project:
                     <strong id="project-name" class="highlight-project">Loading...</strong> –
                     <span id="project-days-ago">Loading...</span>
                 </p>
